--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -13,5 +13,10 @@ services:
      - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
      - mongo_data:/data/db
 
+  redis:
+    image: redis
+    ports:
+     - 6379:6379
+            
 volumes:
         mongo_data:
