--- a/hello-frontend/docker-compose.yml
+++ b/hello-frontend/docker-compose.yml
@@ -14,3 +14,11 @@ services:
 
   debug-helper:
     image: busybox # this will pull the existing image
+
+  nginx:
+    image: nginx:1.20.1
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro #  the final ro declares that the volume will be read-only
+    ports:
+      - 8080:80
+    container_name: reverse-proxy
