--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -8,7 +8,7 @@ RUN CI=true npm test
 FROM node:16 AS build-stage
 WORKDIR /usr/src/app
 COPY --from=test-stage /usr/src/app /usr/src/app
-ENV REACT_APP_BACKEND_URL=http://localhost:3000
+ENV REACT_APP_BACKEND_URL=http://localhost:8080/api
 RUN npm run build
 
 FROM nginx
