--- a/todo-app/docker-compose.yml
+++ b/todo-app/docker-compose.yml
@@ -1,15 +1,10 @@
 services:
   frontend:
-    container_name: todo-frontend-dev
-    image: todo-front
+    container_name: todo-frontend
+    image: todo-front-prod
     build:
       context: ./todo-frontend/
-      dockerfile: dev.Dockerfile
-    volumes:
-      - ./todo-frontend/:/usr/src/app
-    environment:
-      - CHOKIDAR_USEPOLLING=true # https://create-react-app.dev/docs/troubleshooting/#npm-start-doesnt-detect-changes
-
+      dockerfile: Dockerfile
 
   mongo:
     image: mongo
@@ -32,11 +27,11 @@ services:
       - redis_data:/data
 
   backend:
-    container_name: todo-backend-dev
-    image: todo-backend
+    container_name: todo-backend
+    image: todo-backend-prod
     build:
       context: ./todo-backend/
-      dockerfile: dev.Dockerfile
+      dockerfile: Dockerfile
     volumes:
       - ./todo-backend/:/usr/src/app
     environment:
@@ -46,7 +41,7 @@ services:
   nginx:
     image: nginx:1.20.1
     volumes:
-      - ./nginx.dev.conf:/etc/nginx/nginx.conf:ro #  the final ro declares that the volume will be read-only
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro #  the final ro declares that the volume will be read-only
     ports:
       - 8080:80
     container_name: todo-reverse-proxy
