--- a/todo-app/todo-backend/Dockerfile
+++ b/todo-app/todo-backend/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /usr/src/app
 COPY --chown=node:node . /usr/src/app
 RUN npm ci --only=production
 USER node
+EXPOSE 3000
 ENV DEBUG=app:*
 CMD ["npm", "start"]
 
